# WLM-World-Generation-Runtime

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
docs/: api.md  overview.md  roadmap.md  runtime-architecture.md
examples/: branching_timeline.py  causal_system.py  simple_world.py
src/wlm_world_generation_runtime/: __init__.py  api.py  causal_engine.py  narrative_engine.py  timeline_builder.py  topology_builder.py  utils.py  world_graph.py
tests/: test_causality.py  test_end_to_end.py  test_narrative.py  test_timeline.py  test_topology.py
